tests/unit/pass/t28.hir
// 28 : udchain while

module udchain_while{
    def main():i32{
        x:bool = 0:bool;
        var z:i32;
        while(x){
            z = 0:i32;
        }
        return z;
    }
}
